src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-clinic-proxy-service
spec:
  type: ClusterIP
  selector:
    app: medical-clinic-proxy
  ports:
    - port: 8083
      targetPort: 8083
