src/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medical-clinic-proxy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: medical-clinic-proxy.commilitio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medical-clinic-proxy
                port:
                  number: 8083
